--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Projet_2/Session3/Test3/
 Projet_2/Session3/Test4/
 Projet_2/Session3/Test5/
 Projet_2/Session3/Test6/
+Projet_2/Session3/Data_Son1.7z
+Projet_2/Session3/Data_Son1/
