Commit Post Session 4

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,15 @@ Projet_2/Session3/Test5/
 Projet_2/Session3/Test6/
 Projet_2/Session3/Data_Son1.7z
 Projet_2/Session3/Data_Son1/
+
+# Ignore Files in session 4 data(only take the .7z)
+Projet_2/Session4/Test1/
+Projet_2/Session4/Test2/
+Projet_2/Session4/Test3/
+Projet_2/Session4/Test4/
+Projet_2/Session4/Test5/
+Projet_2/Session4/Test6/
+Projet_2/Session4/Test7/
+Projet_2/Session4/Test8/
+Projet_2/Session4/Test9/
+Projet_2/Session4/Test10/
